--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ plugins:
   - jekyll-seo-tag
   - kramdown-parser-gfm
   - jekyll-redirect-from
+  - jekyll-remote-theme
+
 
 exclude: 
   - Gemfile
@@ -84,3 +86,4 @@ collections:
     layout: product
     image: https://via.placeholder.com/800x600
     show_sidebar: false
+remote_theme: chrisrhymes/bulma-clean-theme
